# flashcards-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sbt  render.yaml  rust-toolchain.toml
.sqlx/: query-0349244edbbe990c4e58562cf8825763e610469b31fc6c7b825085326e3ef195.json  query-0db2259de78400a1f8bca902076ccf7c92c64647b781f13927f92bfde019496c.json  query-1952b82fa79b1efeac7d344b5dc64cc526ea1bceee54313aa1194489904d1c40.json  query-1b0ec2b98fddd0344ee1b98d9eb9ca32d8ab376564d512cd28a03d7054399909.json  query-3350252c6ece9da52f358b3f7e930fe5416ac19fb5259a20cca1e929294739ac.json  query-358f243683ea759a066982024b15935c547aac60d82a4e5e2961dce893783853.json  query-377927a651c25daf9d6487ef74b98b6755bfbef6407fcfec5b12e1f9379ccef4.json  query-3eb6dcf0beb74090b00ac59fb94655105ebeb669f14a7bd8dd6f19bde5d3bc4a.json  query-487a75ba3084bcd58450b3162f2cdce80286f00cfb77670fba7372fe8a111a86.json  query-4bf4cc7b5ff87f877e51982f2eaf0c8c3d7fc2ce7a01572f5185fcb44f0346b0.json  query-555be6ef622bace840dc901525bd00f3b938a620e4e13070346ada52989a8e86.json  query-591f412f2c27e1a97dda9291bfaa8d055b2ce058dcfbccbde690e5562e00be9f.json  query-70af6708976fba3b8b67667a5a453a35025d0f7ff41352a6bb208f825650b639.json  query-7a1cf5613cbafaf784195eb147566f90f3eb1509f3745d469bcf1d4bae3d8e7b.json  query-8c78821ceff2e4602558322e64e020798f365f554b960bc841b6009fe4f87ab5.json  query-8f63dcb94094ded9e0dae5b4491cf6cdcc0ca2a5138a0f57a12fa698314f932e.json  query-aa37be41d4e8eabe47d9a24e518bd2ed9d5d760fca817cd37ea9cebb2ec576c9.json  query-ba385ad714eaef457542c66ac464128b93c3a6f759d46368fdf5d95225a29166.json  (+8 more)
(+18 files in other folders)
